# Diyet

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sentry_triage.yml
api/: _logtail.js  logtail-test.js  runtime-config.js
assets/: style.css
docs/: codex_strategy.md  configuration.md  prd.md  roadmap.md  sentry_issues.json  sentry_report.md
docs/adr/: 0001-architecture-stack.md
docs/runbooks/: ci.md  deploy.md  logging.md  supabase.md
scripts/: bootstrap.sh  sentry_dsn.sh  sentry_report.sh
src/common/: utils.py
tests/: __init__.py  test_common_utils.py  test_packages_import.py
